fixed button spacing issue

--- a/ankits-website/assets/css/main.css
+++ b/ankits-website/assets/css/main.css
@@ -377,7 +377,12 @@ button,
             input[type="button"].wide,
             button.wide,
             .button.wide {
-                min-width: 40%;
+                width: 50%;
+                height: 10%;
+                font-size: 90%;
+                line-height: 4em;
+                border-radius: 4em;
+                padding: 0 3em;
             }
         
             input[type="submit"].disabled, input[type="submit"]:disabled,
